[package]
name = "lunar_launcher_inject"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tungstenite = "0.18.0"

[profile.release]
strip = true
lto = true
opt-level = "z"